Fix z-index in Firefox

--- a/static/styles/game.css
+++ b/static/styles/game.css
@@ -30,6 +30,7 @@ body {
 	background: #fff;
 	border-bottom: 1px solid #999;
 	margin-bottom: -1px;
+	z-index: 1;
 }
 
 .game-hand,
